Implemented API routes for the log flow

--- a/app/app-components/LogFlow.module.css
+++ b/app/app-components/LogFlow.module.css
@@ -261,6 +261,11 @@
     font-family: 'Inter', sans-serif;
 }
 
+.primaryMini:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
 .uploadedImage {
   display: block;
   width: auto;
